# Web3EMR

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile.toml  README.md  _config.yml  docker-compose.yml  index.html  mkdocs.yml
.github/workflows/: ci.yml  mkdocs-gh-pages.yml  pages.yml
.taskmaster/tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  tasks.json
.taskmaster/templates/: PRD-Phase-1.txt  PRD-Phase-2.txt  PRD-Phase-3.txt  PRD-Phase-4.txt  PRD-Phase-5.txt  PRD-Phase-6.txt  PRD.txt
acknowledgments/: index.html
architecture/: index.html
backend/: Cargo.toml  Dockerfile  README.md  diesel.toml
backend/enterprise-integration/: README.md
backend/migrations/2025-04-25-004225_create_core_tables/: down.sql  up.sql
backend/src/: main.rs
backend/src/models/: mod.rs
contact/: index.html
contributing/: index.html
docs/: Gemfile  _config.yml  acknowledgments.md  architecture.md  contact.md  contributing.md  features.md  index.html  index.md  installation.md  license.md
docs/_pages/: home.md
features/: index.html
frontend/: .eslintignore  .eslintrc.js  .gitignore  Dockerfile  eslint.config.js  package-lock.json  package.json
frontend/src/app/: ClientProviders.tsx  layout.tsx
frontend/src/app/login/: page.tsx
installation/: index.html
license/: index.html
node/: Cargo.toml
pallets/template/: Cargo.toml
runtime/: Cargo.toml
scripts/: PRD.txt  task-complexity-report.json
search/: search_index.json
tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  tasks.json
