[package]
name = "runtime"
description = "Web3EMR Runtime"
version = "0.0.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[dependencies]
codec = { workspace = true }
polkadot-sdk = { workspace = true, features = [
	"pallet-balances",
	"pallet-sudo",
	"pallet-timestamp",
	"pallet-transaction-payment",
	"pallet-transaction-payment-rpc-runtime-api",
	"runtime",
] }
scale-info = { workspace = true }
serde_json = { workspace = true, default-features = false, features = ["alloc"] }

# local pallet templates
template = { path = "../pallets/template" }

[build-dependencies]
polkadot-sdk = { optional = true, workspace = true, features = ["substrate-wasm-builder"] }

[features]
default = ["std"]
std = [
    "codec/std",
    "template/std",
    "polkadot-sdk/std",
    "scale-info/std",
    "serde_json/std",
]
